<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KONTA BAI</string>
    <string name="pickup_location">Pickup Location : </string>
    <string name="status">Status</string>
    <string name="app_logo">App Logo</string>
    <string name="continueButton">Continue</string>
    <string name="full_name">Full Name</string>
    <string name="verification">VERIFICATION</string>
    <string name="please_enter_the_code_was_sent_nin_your_phone_number">Please Enter code that is sent on\n your phone number </string>
    <string name="_91">+91</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="phone_number" tools:ignore="DuplicateDefinition">Phone Number</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="car_number">PB12SC2121</string>
    <string name="car_photos">Car Image</string>
    <string name="i_need_a_taxi">I NEED A TAXI</string>
    <string name="request_status">REQUEST STATUS</string>
    <string name="refresh">REFRESH</string>
    <string name="_1">  1  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pickup_requests">Pickup Requests</string>
    <string name="please_pull_to_refresh">Please pull to refresh</string>
    <string name="please_enter_code_that_is_sent_on_nyour_phone_number">Please Enter code that is sent on your phone number</string>
    <string name="location">Location</string>
    <string name="please_tap_on_row_to_view_customer_details">Please tap on row to view customer details!</string>
    <string name="yes">YES</string>
    <string name="please_swipe_left_to_accept_request">Please swipe left to accept request</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="name">Name:</string>
    <string name="enter_phone_number">Enter Your Phone Number</string>
    <string name="custom_number">+1 20000 51500</string>
    <string name="konta_bai">KONTA BAI</string>
    <string name="create_profile_as_driver">CREATE PROFILE AS DRIVER</string>
    <string name="logout">Logout</string>
    <string name="my_rides">MY RIDES</string>
    <string name="ride_location">Ride Location</string>
    <string name="backbutton">BackButton</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="heading">Heading</string>
</resources>