<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/pickup_location"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pendingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="50dp"
        android:text="@string/location"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_swipe_left_to_accept_request"
        android:textColor="@color/black"
        android:id="@+id/acceptInstruction"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:layout_below="@id/heading"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/acceptInstruction"
        android:layout_marginTop="7dp"
        android:background="@color/black"/>

</RelativeLayout>