<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VerificationActivity">

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Back"
        android:textColor="@color/light_sky_blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/verification"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/please_enter_code_that_is_sent_on_nyour_phone_number"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/codeEdittext"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/corners_background"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:padding="10dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/codeEdittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/continueButton"
        android:textColor="@color/light_sky_blue"
        android:textSize="20sp" />
</RelativeLayout>