<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_location"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="18dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginStart="15dp"
                android:id="@+id/driverSideLocation"
                android:textSize="18dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Complete Ride"
            android:id="@+id/completeRide"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/linear1"
            android:background="@drawable/corners_background"
            android:layout_marginRight="8dp"
            android:padding="3dp"
            android:textColor="@color/light_sky_blue"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/completeRide"
            android:layout_centerHorizontal="true"
            android:id="@+id/heading"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:text="@string/please_tap_on_row_to_view_customer_details"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:layout_below="@id/heading"/>
    </RelativeLayout>


</RelativeLayout>