<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">


    <TextView
        android:id="@+id/logoHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/app_logo"
        android:textAlignment="center"
        android:textColor="@color/light_sky_blue"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:text="@string/_91"
            android:textColor="@color/light_sky_blue"
            android:textSize="20sp"
            android:layout_toLeftOf="@id/phoneNumberEdit"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/phoneNumberEdit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corners_background"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            tools:ignore="TextFields" />

    </RelativeLayout>


    <TextView
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="Next"
        android:textAlignment="center"
        android:textColor="@color/light_sky_blue"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />
</RelativeLayout>