<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/needTaxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/corners_background"
            android:paddingStart="50dp"
            android:paddingTop="10dp"
            android:paddingEnd="50dp"
            android:paddingBottom="10dp"
            android:text="@string/i_need_a_taxi"
            android:textColor="@color/light_sky_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/requestStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/corners_background"
            android:paddingStart="41dp"
            android:paddingTop="10dp"
            android:paddingEnd="41dp"
            android:paddingBottom="10dp"
            android:text="@string/request_status"
            android:textColor="@color/light_sky_blue"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/refreshButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:textSize="17sp"
        android:textColor="@color/light_sky_blue"/>

    <TextView
        android:id="@+id/countRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/round_corners"
        android:layout_alignParentEnd="true"
        android:text="  1  "
android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="HardcodedText" />
</RelativeLayout>