<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_color"
    tools:context=".Activities.DriverSide.DriverSideProfileCreation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="270dp"
            android:id="@+id/driverImageUploading"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/driverSideImageview"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/blackpanther" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="150dp"
                android:scaleX=".7"
                android:scaleY=".7"
                app:backgroundTint="@color/white"
                android:src="@drawable/ic_round_add_24"
                android:padding="5dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/driverImageUploading"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/driverFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/konta_bai"
                android:background="@drawable/corners_background"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="13sp"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/driverPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/corners_background"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="15dp"
                android:hint="@string/custom_number"
                android:textSize="13sp"
                android:maxLines="1"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="Car Number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/carNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners_background"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:hint="@string/car_number"
                android:padding="15dp"
                android:textSize="13sp"
                tools:ignore="TextFields" />
        </LinearLayout>

        <TextView
            android:id="@+id/carImageHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/car_photos"
            android:textColor="@color/black"
            android:textSize="15dp" />

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_marginEnd="60dp"
           app:cardCornerRadius="10dp"
           android:id="@+id/cardview"
           android:layout_below="@id/carImageHeading"
           android:layout_marginTop="10dp"
           android:layout_marginStart="60dp"
           android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:id="@+id/carimage"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:layout_marginTop="80dp"
                   android:src="@drawable/ic_round_add_24"
                   app:backgroundTint="@color/screen_color" />

           </RelativeLayout>

       </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/createDriverProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/screen_background"
            android:layout_marginBottom="30dp"
            android:text="Create Profile"
            android:paddingTop="10dp"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:textAlignment="center"
            android:paddingBottom="10dp"
            android:textSize="15dp" />
    </RelativeLayout>

</ScrollView>