<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_color"
    tools:context=".Activities.DriverSide.DriverDashBoard">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/backbutton"
        android:src="@drawable/ic_round_arrow_back_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="PICKUP REQUESTS"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person_identity"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginStart="1dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="3dp"
            android:id="@+id/driver_logout_button"/>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:tabGravity="center"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorGravity="stretch"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/black" />

    <TextView
        android:id="@+id/refreshHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:text="@string/please_pull_to_refresh"
        android:textSize="16sp" />
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_below="@id/refreshHeading"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:ignore="SpeakableTextPresentCheck" />
</RelativeLayout>